--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a> 
+    <img src="../images/cooking.png" alt="Cooking">
+    <ul>
+      <li><a href="recipes/lasagna.html">Lasagna</a></li>
+      <li><a href="recipes/lemonade.html">Lemonade</a></li>
+      <li><a href="recipes/gelato.html">Gelato</a></li>
+    </ul>
 </body>
 </html>
