--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipes!</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <img src="../images/cooking.png" alt="Cooking">
+    <img src="/images/cooking.png" alt="Cooking">
     <ul>
       <li><a href="recipes/lasagna.html">Lasagna</a></li>
       <li><a href="recipes/lemonade.html">Lemonade</a></li>
